# PDF_TTs_Ai_Model

./: .gitignore  README.md  README_PL_START.md  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_PLAN.md
models/: README_MODELS.txt  download_gosia.bat  download_gosia.ps1  download_model.bat
out_quick/sample_quick/: manifest.json
out_real/koniuszy_streszczenie_2025/: manifest.json
out_real2/koniuszy_streszczenie_2025/: manifest.json
out_real3/koniuszy_streszczenie_2025/: manifest.json
out_real_cuda/koniuszy_streszczenie_2025/: manifest.json
src/pdf_tts_ai/: __init__.py  audio.py  bootstrap.py  cli.py  config.py  extractor.py  gui.py  manifest.py  models.py  paths.py  pipeline.py  segmenter.py  service.py  toc_text.py  tts.py
src/pdf_tts_ai/app/: __init__.py  bootstrap.py  cli.py  gui.py
tests/: test_audio.py  test_bootstrap.py  test_cli.py  test_extractor.py  test_paths.py  test_pipeline.py  test_segmenter.py  test_service.py  test_tts.py
